# rouge-like

./: Cargo.toml
assets/: test_level.ldtk
assets/rouge/: available.units.ron
src/: main.rs
src/game/: camera.rs  level_setup.rs  mod.rs  mouse.rs  movement.rs  units.rs
src/game/assets/: mod.rs
src/game/battle_scene/: camera.rs  fight.rs  map.rs  mod.rs  mouse.rs  movement.rs  ui.rs
src/game/chest_selection/: mod.rs
src/game/map_selection/: mod.rs
src/game/rewards/: mod.rs
src/game/ui/: mod.rs
src/game/unit_selection/: mod.rs
src/game/weapon/: mod.rs
src/menu/: mod.rs
src/splash/: mod.rs
src/util/: mod.rs
