[package]
name = "fun-rougelike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13" }
bevy_ecs_ldtk = { path = "../bevy_ecs_ldtk/", version = "0.10.0" }
bevy_ecs_ldtk_macros = { path = "../bevy_ecs_ldtk/macros", version = "0.9.0" }

[patch.crates-io]
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap/", branch = "main" }
